--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,8 +18,14 @@
 
   <div>
     <%= form.label :password, style: "display: block" %>
-    <%= form.text_field :password %>
+    <%= form.password_field :password %>
   </div>
+
+  <div>
+    <%= form.label 'Confirm Password', style: "display: block" %>
+    <%= form.password_field :password %>
+  </div>
+
 
   <div>
     <%= form.label :email, style: "display: block" %>
@@ -37,18 +43,13 @@
   </div>
 
   <div>
-    <%= form.label :location, style: "display: block" %>
+    <%= form.label 'Country', style: "display: block" %>
     <%= form.text_field :location %>
   </div>
 
   <div>
-    <%= form.label :dob, style: "display: block" %>
+    <%= form.label 'Date of Birth', style: "display: block" %>
     <%= form.date_field :dob %>
-  </div>
-
-  <div>
-    <%= form.label :role, style: "display: block" %>
-    <%= form.number_field :role %>
   </div>
 
   <div>
