Added some minor changes - no big deal

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -25,13 +25,8 @@
   </p>
 
   <p>
-    <strong>Dob:</strong>
+    <strong>Date of Birth:</strong>
     <%= user.dob %>
-  </p>
-
-  <p>
-    <strong>Role:</strong>
-    <%= user.role %>
   </p>
 
 </div>
